# dcs-harness

./: .buildrc  .composerrc  .composerrc-scoped  .gitignore  .styluaignore  CLAUDE.md  LICENSE  README.md  Taskfile.yml  pyproject.toml  selene.toml
.claude/: settings.local.json
docs/: api.rst  conf.py  index.rst  overview.rst
missionscripts/: test_all_visual.lua
src/: _header.lua  airbase.lua  atmosphere.lua  cache.lua  coalition.lua  controller.lua  conversion.lua  coord.lua  datastructures.lua  drawing.lua  eventbus.lua  flag.lua  geogrid.lua  geomath.lua  group.lua  id.lua  logger.lua  misc.lua  missioncommands.lua  namespace.lua  net.lua  shapecache.lua  shapes.lua  spot.lua  staticobject.lua  terrain.lua  time.lua  trees.lua  trigger.lua  unit.lua  vector.lua  vectorops.lua  weapon.lua  world.lua  zone.lua
test_mission_scripts/: harness_integration_test.miz  test_airbase_script.lua  test_atmosphere_script.lua  test_coalition_script.lua  test_controller_script.lua  test_eventbus_script.lua  test_group_script.lua  test_missioncommands_blue_menu.lua  test_shapes_script.lua  test_spawn_orbit_script.lua  test_spot_script.lua  test_staticobject_script.lua  test_terrain_script.lua  test_trigger_script.lua  test_unit_script.lua  test_weapon_script.lua  test_world_script.lua
tests/: mock_dcs.lua  test_atmosphere.lua  test_cache.lua  test_coalition_builders.lua  test_controller.lua  test_controller_options.lua  test_conversion.lua  test_coord.lua  test_cpa.lua  test_datastructures.lua  test_debug.lua  test_drawing_search.lua  test_eventbus.lua  test_flag.lua  (+25 more)
(+5 files in other folders)
