[project]
name = "harness"
version = "0.7.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "luaparser>=3.3.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-lua",
    "sphinxcontrib-luadomain",
]